הוספת פופאפ אישור ושליחת טופס ל-Make.com ולשרת המקומי

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <section id="registration">
         <div class="container">
             <h2 data-en="Secure Your Spot" data-he="הבטח את מקומך">Secure Your Spot</h2>
-            <form id="registration-form">
+            <form id="registration-form" action="https://hook.eu2.make.com/4xskepi8nslj99x5vaihc0dif4kmk2t4" method="POST">
                 <div class="form-group">
                     <label for="name" data-en="Full Name" data-he="שם מלא">Full Name</label>
                     <input type="text" id="name" name="name" required>
