עדכון מיקום הסדנאות לזום בלבד במייל ובפופאפ

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     </div>
                     <div class="detail-item">
                         <strong data-en="Location:" data-he="מיקום:">Location:</strong>
-                        <span data-en="CXpert Innovation Center, Tel Aviv" data-he="מרכז החדשנות CXpert, תל אביב">CXpert Innovation Center, Tel Aviv</span>
+                        <span data-en="Zoom (link will be sent closer to the date)" data-he="זום (קישור יישלח בסמוך למועד הסדנה)">Zoom (link will be sent closer to the date)</span>
                     </div>
                 </div>
                 <p data-en="A confirmation email has been sent to your email address." data-he="אימייל אישור נשלח לכתובת הדואר האלקטרוני שלך.">A confirmation email has been sent to your email address.</p>
